# PR-latency-bot

./: .env.yaml.example  .gitignore  README.md  alembic.ini  pr-latency-bot.sh  pyproject.toml
app/: pr-latency-bot.py
app/db/alembic/: env.py
app/db/alembic/versions/: f96a0f70e7a1_add_table_pull_requests.py
app/db/operators/: base_operator.py  pull_request_operator.py
app/db/tables/: sqlalchemy_orm.py
app/models/: installation.py  jwt_query.py  pr_comment.py  pr_label.py  pull_request.py  repository.py  scheduler.py  trigger.py  user.py
app/prediction_service/: config.yaml.example  factor_getter.py  predictor.py  trainer.py
app/services/: authentication.py  comments.py  queries.py  scheduler.py  triggers.py
app/utils/: config_loader.py  global_variables.py  time_operator.py  word_counter.py
tests/test_db/test_operators/: test_base_operator.py  test_pull_request_operator.py
tests/test_prediction_service/: test_factor_getter.py
