[tool.poetry]
name = "pr-latency-bot"
version = "0.1.0"
description = ""
authors = ["zhangxunhui <zhangxunhui@nudt.edu.cn>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"
json5 = "^0.9.6"
PyYAML = "^5.4.1"
PyJWT = "^2.1.0"
requests = "^2.26.0"
cryptography = "^3.4.7"
SQLAlchemy = "^1.4.22"
alembic = "^1.6.5"
aiomysql = "^0.0.21"
pytest-asyncio = "^0.15.1"
APScheduler = "^3.7.0"
pandas = "^1.3.2"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
